Enable spotless plugin