@@ -4,6 +4,7 @@ plugins {
   id 'eclipse-wtp'
   id 'com.github.ben-manes.versions' version '0.51.0'
   id 'com.google.osdetector' version '1.7.3'
+  id 'com.diffplug.spotless' version '6.25.0'
   id 'net.nemerosa.versioning' version '3.1.0'
   id 'org.openapi.generator' version '7.4.0'
   id 'org.owasp.dependencycheck' version '9.1.0'
@@ -63,10 +64,10 @@ dependencies {
     implementation 'org.jboss:jandex:3.1.7'
 
     // javaFX
-    implementation "org.openjfx:javafx-base:21.0.1:$platform"
-    implementation "org.openjfx:javafx-controls:21.0.1:$platform"
-    implementation "org.openjfx:javafx-fxml:21.0.1:$platform"
-    implementation "org.openjfx:javafx-graphics:21.0.1:$platform"
+    implementation "org.openjfx:javafx-base:22.0.1:$platform"
+    implementation "org.openjfx:javafx-controls:22.0.1:$platform"
+    implementation "org.openjfx:javafx-fxml:22.0.1:$platform"
+    implementation "org.openjfx:javafx-graphics:22.0.1:$platform"
 
     // ssh
     implementation 'org.apache.sshd:sshd-cli:2.12.1'
@@ -94,6 +95,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-migrationsupport:5.10.2'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
+    testImplementation 'org.shredzone.acme4j:acme4j-client:3.2.1'
 
     testImplementation 'jakarta.websocket:jakarta.websocket-client-api:2.1.1'
     testImplementation 'org.codehaus.izpack:izpack-installer:5.2.2-SNAPSHOT'
@@ -113,6 +115,15 @@ dependencies {
     testRuntimeOnly 'org.eclipse:yasson:3.0.3'
 }
 
+spotless {
+  java {
+    ratchetFrom('origin/master')
+    licenseHeaderFile('gradle/LICENSE_HEADER').yearSeparator(', ').skipLinesMatching('.+File Name: .+')
+    googleJavaFormat()
+    importOrder('java', 'javax', 'jakarta', 'org', 'com')
+    removeUnusedImports()
+  }
+}
 compileJava {
     doFirst {
         options.compilerArgs = [
@@ -124,11 +135,15 @@ compileJava {
     }
 }
 
-tasks.withType(Test) {
-    useJUnitPlatform()
-    systemProperty 'junit.jupiter.extensions.autodetection.enabled', 'true'
-    jvmArgs += "-XX:StartFlightRecording:filename=$buildDir/reports/${name}.jfr"
-    testLogging {
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
+tasks.withType(Test).each {
+    it.useJUnitPlatform()
+    it.systemProperty 'junit.jupiter.extensions.autodetection.enabled', 'true'
+    it.jvmArgs += "-XX:StartFlightRecording:filename=$buildDir/reports/${name}.jfr"
+    it.testLogging {
         events 'failed', 'skipped', 'passed'
     }
 }
@@ -164,7 +179,7 @@ openApiGenerate {
 }
 
 openApiValidate {
-  inputSpec = "$rootDir/swagger.yaml".toString() 
+  inputSpec = "$rootDir/swagger.yaml".toString()
 }
 
 jar {
